[package]
name = "nsfw-emoji"
description = "nsfw-emoji-rs"
version = "0.0.5"
authors = ["Anyliew <anyliew@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/anyliew/nsfw-emoji-rs"
repository = "https://github.com/anyliew/nsfw-emoji-rs"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
inventory = "0.3"
serde = "1.0"
skia-safe = { version = "0.80", features = ["textlayout"] }

meme_generator_core = "0.0.4"
meme_generator_utils = "0.0.8"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
